lib/src/compiler/tests/testdata/errors/77.out
error: syntax error
 --> line:1:1
  |
1 | foo rule test { condition: true }
  | ^ expected YARA rules
  |